--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,23 @@
 requires = ["hatchling >= 1.26"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["pfdr"]
+
+[tool.hatch.build.targets.sdist]
+include = [
+    "/pfdr",
+    "/README.md",
+    "/LICENSE",
+    "/pyproject.toml",
+]
+
+[tool.hatch.version]
+path = "pfdr/__init__.py"
+
 [project]
 name = "pfdr"
-version = "0.1.0"
+dynamic = ["version"]
 description = "DBLP ingestion and DeepSeek-powered querying for academic papers"
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -49,16 +63,6 @@ Documentation = "https://github.com/enkerewpo/pfdr#readme"
 
 [project.scripts]
 pfdr = "pfdr.cli:main"
-
-[tool.hatch.build.targets.wheel]
-packages = ["pfdr"]
-
-[tool.hatch.build.targets.sdist]
-include = [
-    "/pfdr",
-    "/README.md",
-    "/LICENSE",
-]
 
 [tool.black]
 line-length = 88
