Update project metadata and dependencies
- Changed project description to reflect AI-powered querying capabilities.
- Updated keywords in `pyproject.toml` to include "LLM" for better searchability.
- Replaced the code formatting tool from Black to Ruff in the development dependencies.
- Incremented package version from 0.1.2 to 0.1.3 in `__init__.py`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ path = "pfdr/__init__.py"
 [project]
 name = "pfdr"
 dynamic = ["version"]
-description = "DBLP ingestion and DeepSeek-powered querying for academic papers"
+description = "DBLP ingestion and AI-powered querying for academic papers"
 readme = "README.md"
 license = {file = "LICENSE"}
 authors = [
@@ -28,7 +28,7 @@ authors = [
 maintainers = [
     {name = "wheatfox", email = "wheatfox17@icloud.com"}
 ]
-keywords = ["dblp", "academic", "papers", "deepseek", "ai", "research"]
+keywords = ["dblp", "academic", "papers", "LLM", "AI", "research"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -56,7 +56,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest",
-    "black",
+    "ruff",
     "flake8",
 ]
 
