--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
     "jinja2>=3.1.0",
     "python-multipart>=0.0.6",
     "aiohttp>=3.8.0",
+    "loguru>=0.7.0",
 ]
 
 [project.optional-dependencies]
